langchain 로직 생성