@@ -3,33 +3,35 @@ package com.vibeport.ai.service;
 import com.vibeport.ai.mapper.AiMapper;
 import com.vibeport.ai.vo.ConcertVo;
 import com.vibeport.mail.MailSMTP;
-import lombok.RequiredArgsConstructor;
+import dev.langchain4j.data.message.ChatMessage;
+import dev.langchain4j.data.message.SystemMessage;
+import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.model.chat.ChatLanguageModel;
+import dev.langchain4j.model.googleai.GoogleAiGeminiChatModel;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.ai.chat.messages.Message;
-import org.springframework.ai.chat.messages.SystemMessage;
-import org.springframework.ai.chat.messages.UserMessage;
-import org.springframework.ai.chat.model.ChatModel;
-import org.springframework.ai.chat.model.Generation;
-import org.springframework.ai.chat.prompt.Prompt;
-import org.springframework.ai.chat.prompt.PromptTemplate;
-import org.springframework.ai.chat.prompt.SystemPromptTemplate;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
 @Service
-@RequiredArgsConstructor
-public class OpenAiService {
+public class LangChainService {
 
+    private final String apiKey;
     private final AiMapper aiMapper;
     private final MailSMTP mailSMTP;
-    private final ChatModel chatModel;
+
+
+    public LangChainService(@Value("${spring.ai.gemini.api-key}") String apiKey, AiMapper aiMapper, MailSMTP mailSMTP) {
+        this.apiKey = apiKey;
+        this.aiMapper = aiMapper;
+        this.mailSMTP = mailSMTP;
+    }
 
     public void fetchAndNotifyNewConcerts() {
-
-        // openAi의 API를 통해서 업데이트 된 콘서트 정보를 가져온다.
         List<ConcertVo> resultList = this.getConcerInfos();
 
         if(!resultList.isEmpty()) {
@@ -46,8 +48,6 @@ public class OpenAiService {
 
     private List<ConcertVo> getConcerInfos() {
         List<ConcertVo> resultList = new ArrayList<>();
-
-        System.out.println("ai search start");
 
         // -----------------------
         // 1. System 메시지 구성
@@ -74,31 +74,30 @@ public class OpenAiService {
               예시:
               Weeknd / 2025-12-20 18:00 / Tokyo Dome / Ticketmaster / 2025-10-01 12:00
        \s""";
-
         SystemMessage systemMessage = new SystemMessage(systemPrompt);
 
         // -----------------------
         // 2. User 메시지 구성
         // -----------------------
         String userPrompt = """
-        2026년 1월에 내한이 확정된 국적이 한국 이외의 가수 목록과\s
-        공연 일자, 장소, 예매처를 알려줘.
-       \s""";
+            2026년 1월에 내한이 확정된 국적이 한국 이외의 가수 목록과 
+            공연 일자, 장소, 예매처를 알려줘.
+        """;
+        UserMessage userMessage = new UserMessage(userPrompt);
 
-        Message userMessage = new UserMessage(userPrompt);
+        ChatLanguageModel model = GoogleAiGeminiChatModel.builder()
+                .apiKey(apiKey)
+                .modelName("gemini-1.5-pro")
+                .temperature(0.0)
+                .build();
 
-        // -----------------------
-        // 3. Prompt 생성
-        // -----------------------
-        Prompt prompt = new Prompt(List.of(systemMessage, userMessage));
+        List<ChatMessage> messages = Arrays.asList(systemMessage, userMessage);
 
-        // -----------------------
-        // 4. LLM 호출
-        // -----------------------
-        Generation answer = chatModel.call(prompt).getResult();
-        String result = answer.getOutput().getText();
+        String response = model.generate(messages).content().text();
 
-        System.out.println(result);
+        System.out.println(response);
+
+
         return resultList;
     }
 
@@ -109,23 +108,26 @@ public class OpenAiService {
     }
 
     private String getArtistInfo(String artistNm) {
-        StringBuffer sysSb = new StringBuffer();
-        sysSb.append("너는 음악 지식에 해박한 음악 평론가야. 그리고 대중들이 알기 쉽게 아티스트에 대해서 설명해주면서 긍정적인 이야기만 해.");
-        SystemPromptTemplate promptTemplate = new SystemPromptTemplate(sysSb.toString());
-        Message sysMessage = promptTemplate.createMessage();
+        String systemPrompt = "너는 음악 지식에 해박한 음악 평론가야. 그리고 대중들이 알기 쉽게 아티스트에 대해서 설명해주면서 긍정적인 이야기만 해.";
+        SystemMessage systemMessage = new SystemMessage(systemPrompt);
 
-        StringBuffer userSb = new StringBuffer();
-        userSb.append("가수 " + artistNm + "에 대해서 1,000글자 이내로 소개하고 3개의 대표곡, 뽑은 대표곡들에 대한 설명도 덧 붙여줘.");
-        userSb.append("사진, 영상, 이모티콘이 포함되어 있지 않은 글자로만 응답해.");
-        PromptTemplate userPromptTamplate = new PromptTemplate(userSb.toString());
-        Message userMessage = userPromptTamplate.createMessage();
+        String userPrompt = "가수 " + artistNm + "에 대해서 1,000글자 이내로 소개하고 3개의 대표곡, 뽑은 대표곡들에 대한 설명도 덧 붙여줘."
+                        + "사진, 영상, 이모티콘이 포함되어 있지 않은 글자로만 응답해.";
+        UserMessage userMessage = new UserMessage(userPrompt);
 
-        Prompt prompt = new Prompt(List.of(sysMessage, userMessage));
-        Generation answer = chatModel.call(prompt).getResult();
-        return answer.getOutput().getText();
+        List<ChatMessage> messages = Arrays.asList(systemMessage, userMessage);
+
+        ChatLanguageModel model = GoogleAiGeminiChatModel.builder()
+                .apiKey(apiKey)
+                .modelName("gemini-1.5-pro")
+                .temperature(0.0)
+                .build();
+
+        return model.generate(messages).content().text();
     }
 
     private void sendArtistInfoMail(String artistInfo) {
         this.mailSMTP.sendArtistInfoMail(artistInfo);
     }
+
 }
